# recsimu-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  changelog.config.js
.github/: CODEOWNERS
.github/workflows/: rust.yml
src/: file.rs  gen.rs  lib.rs  log.rs  main.rs  utils.rs
src/hardware/: blocking.rs  constants.rs  flit.rs  mod.rs  state.rs  switching.rs
src/network/: flit.rs  flit_buffer.rs  mod.rs  option.rs  routing_function.rs  vid.rs
src/network/core_functions/: default.rs  dynamic.rs  mod.rs  multi_tree.rs  packets.rs
src/network/protocols/: default.rs  mod.rs  packets.rs
src/sim/: mod.rs  node.rs  node_type.rs  nodes.rs  rec.rs  simulation.rs
tests/run/: 2_c.json  4_c.json  4_s.json  6_c.json  6_s.json  7_s.json  success1.json  success2.json  success3.json
tests/run/auto/: 10_2trees4.json  10_2trees6.json  11_system_change.json  11_system_change2.json  1_c.json  1_m.json  2_s.json  3_c.json  3_m.json  3_s.json  4_m.json  5_c.json  5_m.json  5_s.json  6_m.json  7_c.json  7_m.json  7_s.json  8_50_0.015_s.json  8_m.json  9_m.json
tests/run/man/: 1_c.json  50_0.001_c.json  50_0.001_s.json  50_0.015_c.json
