[package]
name = "recsimu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cfg-if = "1.0.0"
clap = { version = "4.3.0",  features = ["derive"] }
num-traits = "0.2.15"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }

[profile.dev]
opt-level = 3
lto = true
overflow-checks = true
debug = false
